[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphs_sayuj0"
version = "0.0.2"
authors = [
  { name = "Sayuj", email = "sayuj21@gmail.com" },
]
description = "Graph algorithms package: Dijkstra’s shortest path and BFS shortest path"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sayuj0/graphs_sayuj0"
"Bug Tracker" = "https://github.com/sayuj0/graphs_sayuj0/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graphs_sayuj0"]


